--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -33,6 +33,7 @@ FetchContent_Declare(
 
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE) 
 set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE) 
+set(ASSIMP_WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE) 
 set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE) 
 set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE) 
 set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE) 
