--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Test VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 23)
 
 # add_link_options(-fsanitize=address)
-add_compile_options(-Wall)
+# add_compile_options(-Wall)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_definitions(-DRES_PATH="${CMAKE_SOURCE_DIR}/res/")
