--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -31,13 +31,13 @@ FetchContent_Declare(
 )
 
 
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE) 
-set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF CACHE BOOL "" FORCE) 
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(ASSIMP_WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
+set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE)
+set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(assimp)
 
@@ -78,6 +78,8 @@ add_library(
     TextureRenderTarget.cpp
     shapes/Cuboid.cpp
     utils/FontManager.cpp
+    Mesh.cpp
+    Model.cpp
 )
 
 target_include_directories(renderer PRIVATE ${FREETYPE_INCLUDE_DIRS})
@@ -93,4 +95,3 @@ target_link_libraries(
     freetype
     spdlog
 )
-
