--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_CXX_STANDARD 23)
 # add_compile_options(-Wall)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_definitions(-DRES_PATH="${CMAKE_SOURCE_DIR}/res/")
+add_definitions(-DRES_PATH="${CMAKE_CURRENT_SOURCE_DIR}/res/")
 
-include_directories("${CMAKE_SOURCE_DIR}/include")
 
 add_subdirectory(src)
 add_subdirectory(renderer)
+
+# include_directories("${CMAKE_SOURCE_DIR}/include")
 
 target_link_libraries(
     main
