--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -98,11 +98,14 @@ add_library(
     shapes/Line.cpp
     shapes/Cuboid.cpp
     shapes/Plane.cpp
+    shapes/Sphere.cpp
     utils/FontManager.cpp
     utils/ShaderManager.cpp
+    utils/Timer.cpp
+    utils/Toggle.cpp
     Mesh.cpp
     Model.cpp
-    # ${IMGUI_FILES}
+    CubeMap.cpp
 )
 
 target_include_directories(renderer PRIVATE ${FREETYPE_INCLUDE_DIRS})
