Able to view the scene tree in the imgui debug view

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -101,6 +101,7 @@ add_library(
     utils/Toggle.cpp
     utils/DebugTextureViewer.cpp
     utils/Entity.cpp
+    utils/ImGuiViews.cpp
 )
 
 target_include_directories(renderer PRIVATE ${FREETYPE_INCLUDE_DIRS})
