Refactored Directional light into its own class: DirLight

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -103,6 +103,7 @@ add_library(
     utils/ImGuiViews.cpp
     BlinnPhongRenderer.cpp
     PointLight.cpp
+    DirLight.cpp
 )
 
 target_include_directories(renderer PRIVATE ${FREETYPE_INCLUDE_DIRS})
