Rendered the lighting pass to a texture and displayed in a full screen quad

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -101,6 +101,7 @@ add_library(
     utils/DebugTextureViewer.cpp
     utils/Entity.cpp
     utils/ImGuiViews.cpp
+    utils/FullScreenQuad.cpp
     BlinnPhongRenderer.cpp
     PointLight.cpp
     DirLight.cpp
