Full screen display with two panels side by side

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -64,7 +64,7 @@ FetchContent_MakeAvailable(spdlog)
 FetchContent_Declare(
     imgui
     GIT_REPOSITORY https://github.com/ocornut/imgui.git
-    GIT_TAG v1.91.6
+    GIT_TAG v1.91.9b-docking
 )
 
 FetchContent_MakeAvailable(imgui)
